freshed-rs-macros/tests/ui/fail/component_duplicate_props_html_async_in.stderr
error: duplicate property 'label' on component 'Button'
  --> tests/ui/fail/component_duplicate_props_html_async_in.rs:14:51
   |
14 |     let _ = html_async_in!(ctx, <Button label="A" label="B"></Button>);
   |                                                   ^^^^^
